packages/bemuse/src/app/components/music-select-scene.module.scss
@use 'sass:color';
@use '@bemuse/components/common/common.scss';

.scene {
  @include common.main-bg;

  font: 1rem common.$ui-font;
}

.loading {
  @include common.centered;

  font-size: 2rem;
  text-align: center;
  color: rgba(black, 0.5);
  text-shadow: 0 2px 0 rgba(white, 0.3);
}

.unofficialLabel {
  $color: #f4f3b8;
  position: absolute;
  top: -3px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 1.6em;
  display: inline-block;
  margin-left: 1.5ex;
  background: $color;
  line-height: 1.2;
  padding: 0.3em 0.6em;
  border: 1px solid color.adjust($color, $lightness: -25%);
  box-shadow: 0 1px 2px rgba(black, 0.2);
  color: color.adjust($color, $lightness: -64%);
  border-radius: 3px;
  font-weight: normal;
  z-index: 15;
  cursor: pointer;
  &:hover {
    background: color.adjust($color, $lightness: 10%);
  }
}

.search {
  position: absolute;
  top: 50%;
  right: 4rem;
  transform: translateY(-50%);
  width: 8em;
  font: 0.4em common.$ui-font;
  padding: 0.3em;
  border: 1px solid #ddd;
  background: linear-gradient(to bottom, #f5f4f3, #fff);
  border-radius: 1em;
  text-indent: 1ex;
}

.heading {
  position: relative;
  z-index: 10;
}

.main {
  width: 100%;
  height: 100%;

  & > * {
    overflow-y: scroll;
    padding-top: 10rem;
    padding-bottom: 3rem;
  }
}

@media screen and (width < 600px) {
  .main {
    & > :nth-child(1) {
      height: calc(100% - (80px + 16px));
      padding: 80px 16px 16px 16px;
    }
  }
}

@media screen and (600px <= width < 1000px) {
  .main {
    & > :nth-child(1) {
      height: calc(100% - (10rem + 3rem));
      padding-left: 4rem;
      padding-right: 4rem;
    }
  }
}

@media screen and (width < 1000px) {
  .main {
    & > :nth-child(2) {
      position: fixed;
      width: min(800px, 90vw);
      top: 0;
      right: 0;
      bottom: 0;
      transition: 0.3s transform;
      transform: translateX(100%);
    }

    &[data-in-song='true'] {
      & > :nth-child(2) {
        transform: translateX(0);
      }
    }
  }
}

@media screen and (width >= 1000px) {
  .main {
    width: 100%;
    height: 100%;
    display: grid;
    gap: 0 1rem;
    grid-template-columns: 4rem 1fr 1fr 4rem;
    grid-template-rows: 10rem 1fr 3rem;
    grid-template-areas:
      '. list info .'
      '. list info .'
      '. list info .';

    & > :nth-child(1) {
      grid-area: list;
    }

    & > :nth-child(2) {
      grid-area: info;
    }
  }
}

.customBms {
  width: 640px;
  max-width: 95vw;
}

